  entry header and footer messages.

=== New features ===

* Messages wikilog-item-brief-header/footer, wikilog-item-header/footer and
  others replaced by wikilog-summary-header/footer, wikilog-entry-header/footer
  and others, with better support for plural and gender inflection, separate
  date and time, and also support to category and tag lists.

=== Bug fixes ===

* (mw:bug 21657) Message wikilog-item-brief-header/footer replaced by
  wikilog-summary-header/footer and others, with proper PLURAL support.
* (wl:issue 1) Improve header/footer item messages.
* Disabled minimum feed cache age check ($wgFeedCacheTimeout) in WikilogFeed,
  since this causes the wrong Last-modified header to be output. Waiting for a
  fix for the same problem found in ChangesFeed. Noted by Vitaliy Filippov.

== Wikilog 1.0.1 ==

Nov 27, 2009

=== General notes ===

This is a bugfix release of the 1.0.x branch.  There are no database changes
since Wikilog 1.0.0.

=== New configuration options ===

* $wgWikilogSignAndPublishDefault: default state for the new "sign and
  publish" checkbox in the edit page for new articles.

=== New features ===

* New parameters 'date', 'time', 'updatedDate', 'updatedTime' and 'hasMore'
  for the template pager, used when embedding using templates. Old parameters
  'pubdate' and 'updated' were deprecated, and should be removed on v1.2.0.
* Wikilog article edit page now features a "sign and publish" checkbox that,
  when selected, automatically signs and publishes the article by adding an
  appropriate {{wl-publish:...}} parser function call at the end of the text.

=== Bug fixes ===

* wikilogImportDocumentation.php updated to work with MediaWiki 1.16.
* Fix pass-by-reference call warning on SkinTemplateTabs hook.
* Fix timezone warnings with {{wl-publish:...}} parser function.
* Allow 'wikilog-log-cmt-rejdel' message to use {{GENDER:...}}.


== Wikilog 1.0.0 ==

Oct 30, 2009

First stable release of the Wikilog extension.

=== General notes ===
